react-redux is added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
+<!DOCTYPE html>
 <html>
-  <body class="info">
+  <head>
+    <title>React-redux-webpack</title>
+  </head>
+  <body>
+    <div class="todoapp" id="root">
+    </div>
     <script src="dist/bundle.js"></script>
   </body>
 </html>
